update ui and score and turn player finished and finally finished project

--- a/index.html
+++ b/index.html
@@ -11,6 +11,14 @@
 	</head>
 	<body>
 		<section>
+			<div class="score">
+				<div class="red-score">
+					red: <span>0</span>
+				</div>
+				<div class="blue-score">
+					blue: <span>0</span>
+				</div>
+			</div>
 			<div class="game-grid-container"></div>
 			<div id="game-status"></div>
 		</section>
